--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=hostit-auth
+# Server port configuration
+server.port=6000
+
+# DataSource configuration (if using H2 database for example)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+
+# JPA/Hibernate properties (if needed)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Spring Security properties
+# Define properties for security configurations if necessary
+
+# OAuth2 properties
+# Define properties for OAuth2 configurations if necessary
+
+# Logging configuration
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+
+# Application-specific properties
+# Add any custom properties specific to your application
