--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -1,17 +1,12 @@
 spring.application.name=hostit-auth
 # Server port configuration
-server.port=6000
+server.port=8000
 
-# DataSource configuration (if using H2 database for example)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+
+
 
 # JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
 # Spring Security properties
@@ -26,3 +21,9 @@ logging.level.org.hibernate.SQL=DEBUG
 
 # Application-specific properties
 # Add any custom properties specific to your application
+
+#Connection to phpmyadmin
+spring.datasource.url=jdbc:mysql://localhost:3306/hostit_auth
+spring.datasource.username=root
+spring.datasource.password=
+spring.h2.console.enabled=true
