--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -1,2 +1,28 @@
-spring.application.name=hostit-storage
+spring.application.name=ihostit-storage
 debug=true
+server.port=8001
+
+# JPA/Hibernate properties (if needed)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+# Spring Security properties
+# Define properties for security configurations if necessary
+
+# OAuth2 properties
+# Define properties for OAuth2 configurations if necessary
+
+# Logging configuration
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ihostit_storage
+spring.datasource.username=root
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+
+minio.accessKey=Q3AM3UQ867SPQQA43P2F
+minio.secretKey=K1VIUWqUuLsD8pLcpP3yLUF2vFe6yzSQp9UXEbXM
+minio.url=http://192.168.17.1:54711/api/v1/service-account-credentials
+minio.bucketName=hostit
