First commit of hostit_synchro

--- a/backend/hostit_synchro/src/main/resources/application.properties
+++ b/backend/hostit_synchro/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=hostit_synchro
+# Spring application settings
+spring.application.name=hostit-synchro
+server.port=8080
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.train.hostit_synchro=DEBUG
+
+# MinIO configuration (if applicable)
+minio.url=http://localhost:9000
+minio.accessKey=your-access-key
+minio.secretKey=your-secret-key
+minio.bucketName=your-bucket-name
+
+# Firebase configuration (if applicable)
+# Add Firebase configuration properties here
+
+# File synchronization settings
+# Add any synchronization-related properties here
