hostit_synchro SERVICE reorganised

--- a/backend/hostit_synchro/src/main/resources/application.properties
+++ b/backend/hostit_synchro/src/main/resources/application.properties
@@ -1,19 +1,26 @@
-# Spring application settings
-spring.application.name=hostit-synchro
-server.port=8080
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Logging configuration
-logging.level.org.springframework=INFO
-logging.level.com.train.hostit_synchro=DEBUG
+# JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-# MinIO configuration (if applicable)
-minio.url=http://localhost:9000
-minio.accessKey=your-access-key
-minio.secretKey=your-secret-key
-minio.bucketName=your-bucket-name
+# Firebase Configuration
+firebase.database-url=https://your-project-id.firebaseio.com
+firebase.config.path=/path/to/firebase-service-account.json
 
-# Firebase configuration (if applicable)
-# Add Firebase configuration properties here
+# MinIO Configuration
+spring.minio.url=http://localhost:9000
+spring.minio.access-key=your-access-key
+spring.minio.secret-key=your-secret-key
+spring.minio.bucket-name=your-bucket-name
+spring.minio.region=us-east-1
 
-# File synchronization settings
-# Add any synchronization-related properties here
+# If you want to use MinIO for storing files, you may need to set up some additional properties for multipart file uploads
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
