--- a/backend/hostit_synchro/pom.xml
+++ b/backend/hostit_synchro/pom.xml
@@ -37,6 +37,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.3.0</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
