--- a/backend/hostit_synchro/pom.xml
+++ b/backend/hostit_synchro/pom.xml
@@ -46,7 +46,11 @@
 			<artifactId>minio</artifactId>
 			<version>8.3.0</version>
 		</dependency>
-	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
