--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -18,11 +18,11 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ihostit_storage
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.h2.console.enabled=true
 
-
-minio.accessKey=Q3AM3UQ867SPQQA43P2F
-minio.secretKey=K1VIUWqUuLsD8pLcpP3yLUF2vFe6yzSQp9UXEbXM
-minio.url=http://192.168.17.1:54711/api/v1/service-account-credentials
-minio.bucketName=hostit
+#Minio Configuration
+minio.accessKey=B7CvxeruN5dwA9oGJEGr
+minio.secretKey=dOzJqkAh80L6veSwog1jKUqm79tWcN152qBoB5Ez
+minio.url=http://192.168.129.5:9090/api/v1/service-account-credentials
+minio.bucketName=minio-hostit-bucket
