Feature: Upload file in minio and save metadata in the database

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -1,28 +1,27 @@
-spring.application.name=ihostit-storage
-debug=true
+spring.application.name=hostit-storage
 server.port=8001
 
 # JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
-
-# Spring Security properties
-# Define properties for security configurations if necessary
-
-# OAuth2 properties
-# Define properties for OAuth2 configurations if necessary
-
-# Logging configuration
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-
-spring.datasource.url=jdbc:mysql://localhost:3306/ihostit_storage
-spring.datasource.username=root
-spring.datasource.password=root
-spring.h2.console.enabled=true
+spring.sql.init.mode=always
 
 #Minio Configuration
-minio.accessKey=B7CvxeruN5dwA9oGJEGr
-minio.secretKey=dOzJqkAh80L6veSwog1jKUqm79tWcN152qBoB5Ez
-minio.url=http://192.168.129.5:9090/api/v1/service-account-credentials
-minio.bucketName=minio-hostit-bucket
+spring.minio.url=http://localhost:9000
+spring.minio.bucket=hostit
+spring.minio.access-key=4M7rgN40Zj9PPQpIlRD2
+spring.minio.secret-key=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+#spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+#spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+#spring.servlet.multipart.max-file-size=5MB
+# Max Request Size
+#spring.servlet.multipart.max-request-size=10MB
