--- a/backend/hostit-storage/docker-compose.yml
+++ b/backend/hostit-storage/docker-compose.yml
@@ -1,12 +1,11 @@
-minio:
-  image: bitnami/minio:2021.3.1
-  container_name: minio
-  environment:
-    MINIO_ACCESS_KEY: "Q3AM3UQ867SPQQA43P2F"
-    MINIO_SECRET_KEY: "tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
-  volumes:
-
-  ./data/minio-persistence:/data
-  ./data/minio-persistence/certs:/certs
-ports:
-  9000:9000
+version: '3.1'
+services:
+  db-hostit-storage:
+    container_name: db-hostit-storage
+    image: mariadb:latest
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_DATABASE: hostit_storage
+    volumes:
+      - hostit_storage_metadata:/var/lib/mysql
