--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -3,9 +3,12 @@ debug=true
 server.port=8001
 
 # JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
-
+spring.sql.init.mode=always
 # Spring Security properties
 # Define properties for security configurations if necessary
 
@@ -16,13 +19,13 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ihostit_storage
+spring.datasource.url=jdbc:mariadb://localhost:3306/ihostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
 
 #Minio Configuration
-minio.accessKey=B7CvxeruN5dwA9oGJEGr
-minio.secretKey=dOzJqkAh80L6veSwog1jKUqm79tWcN152qBoB5Ez
-minio.url=http://192.168.129.5:9090/api/v1/service-account-credentials
-minio.bucketName=minio-hostit-bucket
+minio.accessKey=4M7rgN40Zj9PPQpIlRD2
+minio.secretKey=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
+minio.url=http://localhost:9000
+minio.bucketName=hostit
