--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_dropzone: ^4.0.0
   provider: ^6.1.2
   dotted_border: ^2.1.0
+  http: ^1.2.1
+  path_provider: ^2.1.3
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
