--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.1
   path_provider: ^2.1.3
   file_picker: ^8.0.3
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
