--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^2.1.3
   file_picker: ^8.0.3
   mime: ^1.0.5
+  logger: ^2.3.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
