feat: save metadata after file upload and throw exception

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=ihostit-storage
-debug=true
 server.port=8001
 
 # JPA/Hibernate properties (if needed)
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+spring.jpa.open-in-view=false
 # Spring Security properties
 # Define properties for security configurations if necessary
 
@@ -23,6 +21,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/ihostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
 #Minio Configuration
 minio.accessKey=4M7rgN40Zj9PPQpIlRD2
