feat: create function to generate in demand uri download

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -30,3 +30,6 @@ minio.accessKey=4M7rgN40Zj9PPQpIlRD2
 minio.secretKey=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
 minio.url=http://localhost:9000
 minio.bucketName=hostit
+
+#metadata uri expiration in seconds
+metadata.uri.download.expiration=3600
