--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -11,9 +11,15 @@ spring.sql.init.mode=always
 
 #Minio Configuration
 spring.minio.url=http://localhost:9000
-spring.minio.bucket=hostit
-spring.minio.access-key=4M7rgN40Zj9PPQpIlRD2
-spring.minio.secret-key=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
+spring.minio.bucket=minio-hostit-bucket
+
+#Loique Keys
+spring.minio.access-key=qaC6mnl8dOP77Bbb2nvc
+spring.minio.secret-key=GVut56e6dkyVEbZWqSlWBW6G2iZrJlh0qpbAFUdT
+
+#Harold Raja keys
+#spring.minio.access-key=4M7rgN40Zj9PPQpIlRD2
+#spring.minio.secret-key=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
 
 
 ## MULTIPART (MultipartProperties)
