--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.application.name=hostit-auth
 # Server port configuration
 server.port=8000
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=takkamdarios@gmail.com
+spring.mail.password=takkamdarios@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 
 
