--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -5,10 +5,11 @@ server.port=8000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=takkamdarios@gmail.com
-spring.mail.password=takkamdarios@gmail.com
+spring.mail.password=lpgq eexu spsr sowr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
 
 
 
