--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=hostit-auth
+spring.application.name=hostit
 # Server port configuration
 server.port=8000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.from=noreply@gmail.com
 spring.mail.username=takkamdarios@gmail.com
-spring.mail.password=lpgq eexu spsr sowr
+spring.mail.password=lpgqeexuspsrsowrs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
