2FA authentication Done

--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.jpa.show-sql=true
 # Logging configuration
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 
 # Application-specific properties
 # Add any custom properties specific to your application
