feat: delete file done

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ihostit-storage
 server.port=8001
+#server.addres=10.2.101.47
 
 # JPA/Hibernate properties (if needed)
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
