--- a/backend/hostit-auth/pom.xml
+++ b/backend/hostit-auth/pom.xml
@@ -93,9 +93,23 @@
         <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>dev.samstevens.totp</groupId>
+        <artifactId>totp</artifactId>
+        <version>1.7.1</version>
+    </dependency>
+
+    <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+        <groupId>com.google.auth</groupId>
+        <artifactId>google-auth-library-oauth2-http</artifactId>
+        <version>0.24.0</version>
+    </dependency>
+
+
+
     <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
