GET FILES INFO DONE

--- a/backend/hostit-analytics/src/main/resources/application.properties
+++ b/backend/hostit-analytics/src/main/resources/application.properties
@@ -1,1 +1,32 @@
-spring.application.name=hostit-analytics
+spring.application.name=hostit_analytics
+# Server port configuration
+server.port=8000
+
+
+
+
+# JPA/Hibernate properties (if needed)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.beans=DEBUG
+
+
+# Spring Security properties
+# Define properties for security configurations if necessary
+
+# OAuth2 properties
+# Define properties for OAuth2 configurations if necessary
+
+# Logging configuration
+#logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+
+# Application-specific properties
+# Add any custom properties specific to your application
+
+#Connection to phpmyadmin
+spring.datasource.url=jdbc:mysql://localhost:3306/hostit_analytics
+spring.datasource.username=root
+spring.datasource.password=
+spring.h2.console.enabled=true
