--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   logger: ^2.3.0
   http_parser: ^4.0.2
   intl: ^0.19.0
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_test:
