--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -18,19 +18,19 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/ihostit_storage
+spring.datasource.url=jdbc:mariadb://localhost:3306/ihostit_storages
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.h2.console.enabled=true
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 #Minio Configuration
-minio.accessKey=4M7rgN40Zj9PPQpIlRD2
-minio.secretKey=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
-minio.url=http://localhost:9000
-minio.bucketName=hostit
+#minio.accessKey=4M7rgN40Zj9PPQpIlRD2
+#minio.secretKey=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
+#minio.url=http://localhost:9000
+#minio.bucketName=hostit
 
 #metadata uri expiration in seconds
 metadata.uri.download.expiration=3600
