--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -15,9 +15,11 @@ spring.mail.properties.mail.debug=true
 
 
 # JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.sql.init.mode=always
+spring.jpa.open-in-view=false
 # Spring Security properties
 # Define properties for security configurations if necessary
 
@@ -34,7 +36,7 @@ logging.level.org.springframework.security=DEBUG
 # Add any custom properties specific to your application
 
 #Connection to phpmyadmin
-spring.datasource.url=jdbc:mysql://localhost:3306/hostit_auth
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_auth
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.h2.console.enabled=true
