--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   http_parser: ^4.0.2
   intl: ^0.19.0
   web_socket_channel: ^3.0.0
+  google_fonts: ^6.2.1
+  fluentui_system_icons: ^1.1.239
 
 dev_dependencies:
   flutter_test:
