--- a/backend/hostit-auth/src/main/resources/application.properties
+++ b/backend/hostit-auth/src/main/resources/application.properties
@@ -1,23 +1,16 @@
-spring.application.name=hostit
+spring.application.name=hostit-auth
 # Server port configuration
 server.port=8000
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.from=noreply@gmail.com
-spring.mail.username=takkamdarios@gmail.com
-spring.mail.password=lpgqeexuspsrsowrs
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.debug=true
 
 
 
 # JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.sql.init.mode=always
+spring.jpa.open-in-view=false
 # Spring Security properties
 # Define properties for security configurations if necessary
 
@@ -27,14 +20,12 @@ spring.jpa.show-sql=true
 # Logging configuration
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=DEBUG
-
 
 # Application-specific properties
 # Add any custom properties specific to your application
 
 #Connection to phpmyadmin
-spring.datasource.url=jdbc:mysql://localhost:3306/hostit_auth
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_auth
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.h2.console.enabled=true
