feat: run all backend with single docker compose command

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/ihostit_storage
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_storage
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
@@ -27,7 +27,8 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 #Minio Configuration
-minio.url=http://localhost:9000
+#minio.url=http://192.168.129.101:9000
+minio.host.ip.address=192.168.129.101
 minio.bucketName=hostit
 
 #metadata uri expiration in seconds
@@ -38,8 +39,8 @@ metadata.uri.download.expiration=3600
 #minio.secretKey=GVut56e6dkyVEbZWqSlWBW6G2iZrJlh0qpbAFUdT
 
 #Harold Raja keys
-minio.accessKey=4M7rgN40Zj9PPQpIlRD2
-minio.secretKey=nszYImXnaaDgZVxlgRgJIZtMDetpQUBXtB0O9HTR
+minio.accessKey=minioadmin
+minio.secretKey=minioadmin
 
 
 ## MULTIPART (MultipartProperties)
