--- a/backend/hostit-user/src/main/resources/application.properties
+++ b/backend/hostit-user/src/main/resources/application.properties
@@ -25,7 +25,15 @@ logging.level.org.hibernate.SQL=DEBUG
 # Add any custom properties specific to your application
 
 #Connection to phpmyadmin
-spring.datasource.url=jdbc:mariadb://db-user:3306/hostit_user
+#spring.datasource.url=jdbc:mariadb://db-user:3306/hostit_user
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_user
 spring.datasource.username=root
 spring.datasource.password=root
 spring.h2.console.enabled=true
+
+sping.mail.host=smtp.gmail.com
+spring.mail.port=587
+sping.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
