--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -19,17 +19,18 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
-
+#spring.datasource.url=jdbc:mariadb://db-storage:3306/hostit_storage
+spring.datasource.url=jdbc:mariadb://localhost:3306/hostit_storage
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.h2.console.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 #Minio Configuration
 #minio.url=http://192.168.129.101:9000
-minio.host.ip.address=192.168.129.101
+#minio.host.ip.address=192.168.129.101
+minio.host.ip.address=localhost
 minio.bucketName=hostit
 
 #minio.accessKey=4M7rgN40Zj9PPQpIlRD2
