FIle analysis directories

--- a/backend/hostit-analytics/src/main/resources/application.properties
+++ b/backend/hostit-analytics/src/main/resources/application.properties
@@ -1,1 +1,37 @@
-spring.application.name=hostit-analytics
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/hostit_analytics?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (none, update, create, create-drop, validate)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JPA repositories
+spring.data.jpa.repositories.enabled=true
+
+# Server properties
+server.port=8080
+server.error.include-message=always
+
+# Logging
+logging.level.org.springframework.web=INFO
+logging.level.com.ecoleit.hostitanalytics=DEBUG
+logging.file.name=application.log
+
+# JSON date and time formats
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Spring security (if security is implemented)
+# spring.security.user.name=admin
+# spring.security.user.password=admin
+
+# File upload properties (if file uploads are supported)
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
