--- a/backend/hostit-analytics/src/main/resources/application.properties
+++ b/backend/hostit-analytics/src/main/resources/application.properties
@@ -1,32 +1,42 @@
-spring.application.name=hostit_analytics
-# Server port configuration
-server.port=8000
-
-
-
-
-# JPA/Hibernate properties (if needed)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.beans=DEBUG
-
-
-# Spring Security properties
-# Define properties for security configurations if necessary
-
-# OAuth2 properties
-# Define properties for OAuth2 configurations if necessary
-
-# Logging configuration
-#logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-
-# Application-specific properties
-# Add any custom properties specific to your application
-
-#Connection to phpmyadmin
-spring.datasource.url=jdbc:mysql://localhost:3306/hostit_analytics
+# DataSource configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/hostit_analytics?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate and JPA configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JPA repositories
+spring.data.jpa.repositories.enabled=true
+
+# Server properties
+server.port=8080
+server.error.include-message=always
+
+# Logging
+logging.level.org.springframework.web=INFO
+logging.level.com.ecoleit.hostitanalytics=DEBUG
+logging.file.name=application.log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# JSON date and time formats
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# File upload properties (if file uploads are supported)
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+# Enable debug mode
+spring.reactor.debug-agent.enabled=true
+
+# Enable H2 console (if needed)
 spring.h2.console.enabled=true
+
+# Set active profile
+spring.profiles.active=dev
