feat: firebase hosting and ngrok ingress test successfully

--- a/backend/hostit-storage/src/main/resources/application.properties
+++ b/backend/hostit-storage/src/main/resources/application.properties
@@ -29,8 +29,9 @@ spring.servlet.multipart.max-request-size=500MB
 
 #Minio Configuration
 #minio.url=http://192.168.129.101:9000
-#minio.host.ip.address=192.168.129.101
-minio.host.ip.address=localhost
+#minio.host.address=http://192.168.129.101:9000
+
+minio.host.address=http://localhost:9000
 minio.bucketName=hostit
 
 #minio.accessKey=4M7rgN40Zj9PPQpIlRD2
