--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   fluentui_system_icons: ^1.1.239
   flutter_svg: ^2.0.10+1
   path: ^1.9.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
