feat(ui): recaptcha v3 confing

--- a/backend/hostit-user/src/main/resources/application.properties
+++ b/backend/hostit-user/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
+#recaptcha secret-key
+google.recaptcha.secret=6Lee8vApAAAAAPLqtAp57uuTe8sW5aJA-FYEBwPn
+
 # Application-specific properties
 # Add any custom properties specific to your application
 
