--- a/frontend/hostit_ui/pubspec.yaml
+++ b/frontend/hostit_ui/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   path: ^1.9.0
   url_launcher: ^6.2.6
+  g_recaptcha_v3: ^0.0.6
 
 dev_dependencies:
   flutter_test:
