--- a/backend/hostit-user/Dockerfile
+++ b/backend/hostit-user/Dockerfile
@@ -1,3 +1,21 @@
+#FROM amazoncorretto:21-alpine-jdk
+#COPY target/hostit-user-0.0.1-SNAPSHOT.jar hostit-user.jar
+#ENTRYPOINT ["java", "-jar", "hostit-user.jar"]
+
+# Use an official Maven image as the base image
+FROM maven:3.9.7-amazoncorretto-21  AS build
+# Set the working directory in the container
+WORKDIR /app
+# Copy the pom.xml and the project files to the container
+COPY pom.xml .
+COPY src ./src
+# Build the application using Maven
+RUN mvn package -DskipTests
+# Use an official OpenJDK image as the base image
 FROM amazoncorretto:21-alpine-jdk
-COPY target/hostit-user-0.0.1-SNAPSHOT.jar hostit-user.jar
-ENTRYPOINT ["java", "-jar", "hostit-user.jar"]
+# Set the working directory in the container
+WORKDIR /app
+# Copy the built JAR file from the previous stage to the container
+COPY --from=build /app/target/*.jar hostit-user.jar
+# Set the command to run the application
+CMD ["java", "-jar", "hostit-user.jar"]
